--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 @using Microsoft.AspNetCore.Identity
-@using CarDealer.Web
+@using CarDealer.Data.Models
+@using CarDealer.Services.Models
 @using CarDealer.Web.Models
-@using CarDealer.Web.Models.AccountViewModels
-@using CarDealer.Web.Models.ManageViewModels
+@using CarDealer.Web.Models.AccountModels
+@using CarDealer.Web.Models.Cars
+@using CarDealer.Web.Models.Customers
+@using CarDealer.Web.Models.Suppliers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
