--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
@@ -2,11 +2,12 @@
 @using CarDealer.Data.Models
 @using CarDealer.Services.Models
 @using CarDealer.Services.Models.Customers
+@using CarDealer.Services.Models.Cars
+@using CarDealer.Services.Models.Sales
 @using CarDealer.Web.Models
 @using CarDealer.Web.Models.AccountModels
 @using CarDealer.Web.Models.Cars
 @using CarDealer.Web.Models.Customers
 @using CarDealer.Web.Models.Suppliers
-@using CarDealer.Services.Models.Cars
 @using System.Globalization;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
