--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using CarDealer.Web.Infrastructures.Extensions
 @using CarDealer.Data.Models
 @using CarDealer.Services.Models
 @using CarDealer.Services.Models.Customers
