--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CarDealer.Web</title>
+    <title>@ViewData["Title"] - CarDealer Web Store</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,14 +26,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CarDealer.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CarDealer Web Store</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    
+                    <li><a href="/customers/all/ascending">Customers</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown"  href="#">Sales <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/sales">All sales</a></li>
+                            <li><a href="/sales/discounted">Discounted sales</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="/cars/parts">Cars</a></li>
                 </ul>
-                @await Html.PartialAsync("_LoginPartial")
+                
+                    @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
     </nav>
