--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/Shared/_Layout.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a href="/customers/all/ascending">Customers</a></li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Customers<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/customers/all/ascending">All</a></li>
+                            <li><a href="/customers/create">Create</a></li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"  href="#">Sales <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -41,6 +47,7 @@
                     </li>
 
                     <li><a href="/cars/parts">Cars</a></li>
+                    <li><a href="/parts/all">Parts</a></li>
                 </ul>
                 
                     @await Html.PartialAsync("_LoginPartial")
