--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using CarDealer.Web.Models
 @using CarDealer.Web.Models.AccountModels
 @using CarDealer.Web.Models.Cars
+@using CarDealer.Web.Models.Parts
 @using CarDealer.Web.Models.Customers
 @using CarDealer.Web.Models.Suppliers
 @using System.Globalization;
