--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/Parts/Edit.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/Parts/Edit.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Edit part";
 }
-<h2>@ViewData["Title"]</h2>
+<h2> @ViewData["Title"] 
+</h2>
 
 @Html.Partial("_PartForm", Model)
+
+
