--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/Customers/_CustomerForm.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/Customers/_CustomerForm.cshtml
@@ -1,5 +1,9 @@
 ﻿@model CustomerFormModel
 
+@{
+    var pageName = ViewContext.RouteData.Values["action"];
+}
+
 <form method="post">
     <div class="row">
         <div class="col-md-3">
@@ -21,8 +25,19 @@
             </div>
         </div>
     </div>
-    <div>
-        <input class="btn btn-success" type="submit" value="Save Customer" />
-    </div>
+   
+    @{
+        if (pageName.ToString() != "delete")
+        {
+            <div>
+                @{if (pageName.ToString().ToLower() == "edit")
+                    {
+                        <a href="/customers/all/ascending" class=" btn btn-default">Back</a>
+                    }
+                }
+                <input class="btn btn-success" type="submit" value="Save Customer" />
+            </div>
+        }
+    }
 
 </form>
