--- a/CarDealer/CarDealer.Web/CarDealer.Web/Views/Cars/parts.cshtml
+++ b/CarDealer/CarDealer.Web/CarDealer.Web/Views/Cars/parts.cshtml
@@ -6,7 +6,9 @@
 <div class="well">
     <h2 class="text-left text-primary">All Cars with their parts</h2>
 </div>
-
+<hr>
+<a class="btn btn-primary" href="/cars/create"> Add Car</a>
+<hr>
 <table class="table table-bordered table-hover table-striped">
     <thead>
         <tr>
@@ -29,7 +31,7 @@
         {
             <tr>
                 <td class="text-center align-middle">
-                    @car.Make
+                   <a href="/cars/@car.Make"> @car.Make</a>
                 </td>
                 <td class="text-center align-middle">
                     @car.Model
