User profiles manage, set users course grades, etc....

--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Courses/Details.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Courses/Details.cshtml
@@ -37,9 +37,18 @@
             }
             else
             {
+                if(Model.Course.EndDate > DateTime.UtcNow)
+                {
                 <div class="text-muted">This course is already started.</div>
+                }
+
+                else
+                {
+                    <div class="text-muted">This course is already finished.</div>
+                }
+
             }
-           
+
 
         }
         else
