--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Manage/Index.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Manage/Index.cshtml
@@ -15,6 +15,14 @@
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
+                <label asp-for="Name"></label>
+                <input asp-for="Name" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Birthdate"></label>
+                <input asp-for="Birthdate" class="form-control" />
+            </div>
+            <div class="form-group">
                 <label asp-for="Email"></label>
                 @if (Model.IsEmailConfirmed)
                 {
