--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/_ViewImports.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/_ViewImports.cshtml
@@ -5,5 +5,6 @@
 @using LearningSystem.Web.Models.ManageViewModels
 @using LearningSystem.Data.Models
 @using LearningSystem.Web.Models.Courses
+@using LearningSystem.Web.Models.Trainer
 @using LearningSystem.Service.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
