--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Home/Index.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CourseListingServiceModel>
+﻿@model HomeIndexViewModel
 @{
     ViewData["Title"] = "Active Courses";
 }
@@ -6,23 +6,24 @@
 <div class="jumbotron ">
     <h1 class=" text-center">Welcome to out learning system!</h1>
 </div>
+<div class="row well text-center">
+    <form asp-action="Search">
+        <div class="col-md-7">
+            <input asp-for="SearchText" class="form-control" placeholder="Search.." />
+        </div>
+        <div class="col-md-2 text-left">
+          <input asp-for="SearchInCourses"/>
+          <label asp-for="SearchInCourses"> </label>
+            <br />
+            <input asp-for="SearchInUser" />
+            <label asp-for="SearchInUser"> </label>
+        </div>
+        <div class="col-md-3">
+        <input type="submit" class="btn btn-block btn-warning" value="Search" />
+        </div>
+    </form>
+</div>
 
 <div class="row">
-    @foreach (var course in Model)
-    {
-        <div class="col-md-4">
-            <div class="panel panel-info">
-                <div class="panel-heading text-center">
-                    <a asp-controller="Courses" asp-action="Details" asp-route-id="@course.Id">@course.Name</a></div>
-                <div class="panel-body text-center">
-                   <!-- <img src="http://lorempixel.com/200/200/abstract?a=@Guid.NewGuid()" alt="Alternate Text" />-->
-                    <hr>
-                <span class="small text-right text-primary">Course duration: @((course.EndDate - course.StartDate).TotalDays) days.</span>
-                <hr>
-                </div>
-               
-            </div>
-        </div>
-
-    }
+   @await Html.PartialAsync("_CourseListingPartial",Model.Courses)
 </div>
