--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Users/Profile.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Users/Profile.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = $"{Model.Name} Profile";
 }
 
-<h2>ViewData["Title"]</h2>
+<h2>@ViewData["Title"]</h2>
 
 <div class="well">
     <h2 class="text-left text-primary">@Model.Name - @Model.Birthdate.ToShortDateString()</h2>
