--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/_ViewImports.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/_ViewImports.cshtml
@@ -1,10 +1,11 @@
 @using Microsoft.AspNetCore.Identity
-@using LearningSystem.Web
 @using LearningSystem.Web.Models
+@using LearningSystem.Web
 @using LearningSystem.Web.Models.AccountViewModels
 @using LearningSystem.Web.Models.ManageViewModels
 @using LearningSystem.Data.Models
 @using LearningSystem.Web.Models.Courses
 @using LearningSystem.Web.Models.Trainer
 @using LearningSystem.Service.Models
+@using LearningSystem.Web.Models.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
