--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Shared/_Layout.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Shared/_Layout.cshtml
@@ -61,6 +61,13 @@
              </div>
 
         }
+        @if (TempData.ContainsKey(WebConstants.TempDataErrorMessageKey))
+        {
+            <div class="alert alert-danger">
+                @TempData[WebConstants.TempDataErrorMessageKey]
+            </div>
+
+        }
         @RenderBody()
         <hr />
         <footer>
