--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Home/_CourseListingPartial.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Home/_CourseListingPartial.cshtml
@@ -2,7 +2,7 @@
 
 @foreach (var course in Model)
 {
-    var courseDuration = (course.EndDate - course.StartDate).TotalDays;
+    var courseDuration = (int)(course.EndDate - course.StartDate).TotalDays;
 
     <div class="col-md-4">
         <div class="panel panel-info">
