Add Download PDF Certificate  implementation for students with grade (A,B,C)

--- a/LearningSystem/LearningSystem/LearningSystem.Web/Views/Users/Profile.cshtml
+++ b/LearningSystem/LearningSystem/LearningSystem.Web/Views/Users/Profile.cshtml
@@ -20,6 +20,7 @@
         <tr>
             <th>Course</th>
             <th>Grade</th>
+            <th>Certificate</th>
         </tr>
     </thead>
 
@@ -31,6 +32,19 @@
                     <a asp-controller="Courses" asp-action="Details" asp-route-id="@course.Id">@course.Name</a>
                 </td>
                 <td>@(course.Grade == null ? "No Grade" : course.Grade.ToString())</td>
+                <td>
+                @if(course.Grade == Grade.A
+                 || course.Grade == Grade.B
+                 || course.Grade == Grade.C)
+                {
+                    <a asp-action="DownloadCertificate" asp-route-id="@course.Id"> Download </a>
+                }
+                else
+                {
+                    @:No cetrificate.
+
+                }
+                    </td>
             </tr>
         }
     </tbody>
